# RAG-Learning

Notes/: Rag.md
Repo-1/: main.py  pyproject.toml  requirements.txt
Repo-1/0-DataIngestParsing/: 1-dataingestion.ipynb  2-pdfdataingestion.ipynb
Repo-1/0-DataIngestParsing/data/text_files/: python_intro.txt  rag_intro.txt
